--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="row">
                 <div class="col-12">
-                    <h1>12 шагов для Х-кратного <br> роста в карьере и бизнесе</h1>
+                    <h1>Профессия Директор <br> по продажам</h1>
                 </div>
                 <div class="col-md-8">
                     <div class="undertitle_wrapp">
@@ -58,25 +58,34 @@
                             <div class="item">
                                 <span>Старт</span>
                                 <div class="date">
-                                    <div>20</div>
-                                    <span>май</span>
+                                    <div>04</div>
+                                    <span>ноября</span>
                                 </div>
                             </div>
                             <div class="item">
                                 <span>Финиш</span>
                                 <div class="date">
-                                    <div>29</div>
-                                    <span>май</span>
+                                    <div>12</div>
+                                    <span>декабря</span>
                                 </div>
                             </div>
                         </div>
-                        <p class="undertitle">Как выйти на новый уровень: <br> менеджмент, командА, <br> Х-кратный рост?</p>
+                        <p class="undertitle">Практический курс <br> по созданию и управлению <br> отделом продаж</p>
                     </div>
                     <div class="card">
-                        <p>Х-кратный рост в карьере и бизнесе - это давно не удача. Он обеспечивается за счет четкого планирования, развития важных навыков в команде и создания корпоративной култьуры лидерства. И только ты решаешь, каких результатов
-                            добиваться! Создай машину по зарабатыванию денег!</p>
+                        <p>
+                            <span class="font-weight-bold">Успех отдела продаж значительно зависит от навыков его руководителя.</span>
+                            Во время курса вы научитесь:
+                            <ul>
+                                <li>эффективно нанимать, обучать, управлять менеджерами по продажам</li>
+                                <li>создавать скрипты, стандарты, регламенты отдела</li>
+                                <li>внедрять CRM-систему, аналитику, оптимизировать бизнес-процессы</li>
+                                <li>выстраивать лидогенерацию и масштабировать оборот</li>
+                            </ul>
+
+                        </p>
                         <div class="card__footer">
-                            <span class="price">$99</span>
+                            <!-- <span class="price">$99</span> -->
                             <a href="" class="btn btn-success">Принять участие</a>
                         </div>
                     </div>
@@ -99,7 +108,7 @@
             <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
-                <h2>Достижение целей и карьерный рост</h2>
+                <h2>Навыки эффективного управления отделом <br> продаж менее, чем за 7 недель!</h2>
             </div>
             <div class="row">
                 <div class="col-lg-4">
@@ -107,10 +116,10 @@
                 </div>
                 <div class="col-lg-8 d-flex justify-content-end">
                     <div class="card">
-                        <h4>Константин Лашкевич</h4>
-                        <p>Трансформация мышления, мотивация действовать и желание развиваться - вот ключ к успешному карьерному росту в современных реалиях. Сейчас крупные компании хотят видеть менеджеров и Топ-Менеджеров, которые умеют и готовы
-                            выложиться на полную для достижения результатов! И это - ваше преимущество в борьбе за карьерный рост. </p>
-                        <p style="font-weight: 600;">Твоя карьера - это твой бизнес. Ты продаешь свой навык менеджера и свою результативность.</p>
+                        <h4>Алексей Прохоров</h4>
+                        <p>Отдел продаж - основа бизнеса, так как он генерирует продажи и прибыль.</p>
+                        <p>Задача Директора по продажам - обеспечивать постоянный доход и быть лидером для своей команды.</p>
+                        <p>За годы опыта в построении отделов продаж я нашел простой алгоритм, который позволяет за считаные недели решить поставленные задачи и получить необходимые навыки для успешного управления отделом продаж от 2 до 200 человек.</p>
                     </div>
                 </div>
             </div>
@@ -135,7 +144,7 @@
                             <img src="img/sec_about_course/ic_1.svg" alt="">
                             <div class="text">
                                 <span>Старт</span>
-                                <p>9 сентября</p>
+                                <p>4 ноября</p>
                             </div>
                         </div>
                         <div class="media">
@@ -156,22 +165,26 @@
                             <img src="img/sec_about_course/ic_4.svg" alt="">
                             <div class="text">
                                 <span>Длительность</span>
-                                <p>5 часов</p>
+                                <p>36 часов</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-auto">
                     <div class="card card_txt">
-                        <h4>Стратегии и четкое планирование</h4>
-                        <p>Карьерный рост, постановка и достижение целей, развитие и результативность действий - все это достигается за счет четкой стратегии! Очень сложно стать успешным менеджером, Топ-Менеджером или Владельцем Бизнеса - без четкого
-                            видения своего личностного и профессионального развития. Уже в самом начале обучения, вы составите четкий план действий по достижению целей и своему развитию! </p>
-                        <h4>Инструменты и практические действия</h4>
-                        <p>Стратегия и план - это всего первый шаг. В “12 шагов для Х-кратного роста в карьере и бизнесе” вы получите эффективные инструменты и начнете их применять на практике с первого же урока. Умение планировать, пробуждение
-                            глубинной мотивации, создание личного бренда карьериста, постановка и эффективное достижение целей - все это и многое другое вы освоите на практике, основываясь на моих опыте и знаниях! </p>
-                        <h4>Серьезные изменения</h4>
-                        <p>Успешный Успех! Достаточно ли для этого определить свою цель и ждать? Нет конечно! Вам придется пройти через сильнейшие изменения, которые влияют на все: ваше мышление, настроение, здоровье и отношение окружающих. На курсе
-                            вы лучше узнаете, как проходят серьезные изменения на пути к цели и почему так происходит! </p>
+                        <h4>Цель курса</h4>
+                        <p>Дать вам все необходимые знания для создания и эффективного управления отделом продаж, и закрепить их на практике.</p>
+                        <h4>Отдел продаж</h4>
+                        <p>Это сложная структура, которая состоит из многих частей, над которыми мы будем работать:</p>
+                        <ul>
+                            <li>управление менеджерами по продажам: рекрутинг, тестирование, адаптация, обучение и коучинг, мотивация на сверхдостижения и ежедневный контроль;</li>
+                            <li>создание и оптимизация главного бизнес-процесса продаж;</li>
+                            <li>создание и внедрение набора стандартов и процедур, регламентирующих работу отдела;</li>
+                            <li>написание скриптов продаж, создание структурных продающих блоков, их корректировка и совершенствование;</li>
+                            <li>взаимодействие с маркетингом и холодная лидогенерация;</li>
+                            <li>CRM-система, аналитика и сопутствующие IT ресурсы для полноценного контроля и управления отделом;</li>
+                            <li>лидерство руководителя: как вести за собой команду и внедрять изменения.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -186,24 +199,27 @@
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
-                <h2>Константин Лашкевич</h2>
+                <h2>Алексей Прохоров</h2>
             </div>
             <div class="row">
                 <div class="col-md-8">
-                    <p class="undertitle">Инвестор IT, ed-tech, LMS <br> Реальный практик корпоративного управления <i>идеолог Позитивного Менеджмента</i></p>
+                    <p class="undertitle">MBA, Директор по продажам</p>
                     <div class="card">
                         <ul>
-                            <li><img src="img/sec_1/ok.svg" alt="ok"><span><b>№1</b> в России по трансформации корпоративной культуры для Х-кратного роста</span></li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">20 лет в бизнесе с акционерами топ Forbes</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">11 лет управления холдингами</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">5 лет на позиции Президента холдинга RFP Group</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинги “ННК” и “Вторчермет НЛМК” и вывел в лидеры рынка</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Инвестор в проекте Smart Expert</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok"><span><b>15 лет</b> в продажах, 11 лет - Директор по продажам</span></li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Построил более 10 и консультировал построение более 50 отделов продаж с количеством персонала от 5 до 120 человек и оборотом до $100 млн в год</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Руководил продажами в P&G, Philip Morris, Альфа-Банк, TCG Int., Ringostat, Netpeak Group</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Консультировал Google, Gravitel, Ibox, Isaac Pintosevich Systems и др. компании</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Обучался у мировых экспертов в разных сферах: Ицхака Адизеса, Ричарда Бренсона, Тони Роббинса, Браяна Трейси, Радислава Гандапаса, Ицхака Пинтосевича и других.</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Автор тренингов и мастер-классов по построению отделов продаж, продажам, переговорам и др.</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Рост продаж от внедрения авторской методики построения отдела продаж - от 30 до 200% за 3-5 месяцев. Рекорд - 250% за 2 месяца</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Получил степень MBA в Университете Шеффилда, Великобритания (2018)</li>
                         </ul>
                     </div>
                     <div class="works">
                         <img src="img/sec_1/work_1.png" alt="">
                         <img src="img/sec_1/work_2.png" alt="">
+                        <img src="img/sec_1/work_4.png" alt="">
                         <img src="img/sec_1/work_3.png" alt="">
                     </div>
                 </div>
