change welcome message

--- a/index.html
+++ b/index.html
@@ -107,24 +107,33 @@
                 <div class="col-lg-7">
                     <div class="card">
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                        <p>
-                            Приветствую вас, Друзья! <br>
-                            Меня зовут Виталий Бихунов. Уже более 20 лет я занимаюсь бизнесом и, за это время, открыл несколько компаний, которые успешно растут и развиваются. Также, увлекаюсь спортом, режиссурой и другими увлекательными проектами.
+                        <p>У тебя есть мечта?<br>
+                            А ты уже знаешь, что нужно сделать, чтобы ее воплотить?
                         </p>
                         <p>
-                            В какой-то момент, обратил внимание, что все прорывы в бизнесе, спорте и других сферах жизни случались именно тогда, когда происходило какое-то осознание.
+                            Какие решения, какие ежедневные действия, какие промежуточные результаты и в какие сроки приведут тебя к твоей мечте?
                         </p>
                         <p>
-                            Увидев это, начал изучать большое количество литературы, посещать обучающие мероприятия по всему миру и общаться с успешными людьми, для того, чтобы понять какие стратегии они используют для достижения целей.
+                            Как часто ставили себе яркие и интересные цели, действовали, вкладывали море усилий и, по каким-то причинам, не получалось?
                         </p>
                         <p>
-                            В результате, создал несколько обучающих программ, в которых собрал лучшие техники и механики достижения целей со всего мира.
+                            Появлялись ли у тебя вопросы:
                         </p>
                         <p>
-                            Благодаря этим стратегиям сотни моих учеников смогли добиться своих целей и сделать шаг из борьбы за выживание в яркую и насыщенную жизнь.
+                            - где взять Силы и энергию на следующий шаг? <br>
+                            - как преодолевать страхи?<br>
+                            - как переносить падения и радоваться победам?<br>
+                            - как системно и четко идти к своим целям, получая при этом удовольствие от процесса?<br>
+                            - как жить той наполненной и яркой жизнью, о которой ты мечтаешь?<br>
                         </p>
-                        <p class="font-weight-bold">
-                            С удовольствием поделюсь с тобой этими техниками. Твоя мечта стоит того, чтобы ее осуществить!
+                        <p>
+                            Ответы на эти и многие другие вопросы, я собирал по всему миру и с удовольствием готов поделиться ими с тобой.
+                        </p>
+                        <p>
+                            Если у тебя есть цель и ты действительно хочешь ее достичь, буду рад провести тебя по этому яркому пути!
+                        </p>
+                        <p>
+                            Жми на кнопку внизу страницы и узнай подробности!
                         </p>
                     </div>
                 </div>
