--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <h1>Виталий Бихунов</h1>
-                    <p class="undertitle">основатель ТМ Мега Турник, <br> сообщества активных людей Катана Груп, <br> основатель и ведущий тренер <br> обучающего проекта Катана Груп </p>
+                    <p class="undertitle"><span>основатель ТМ Мега Турник,</span> <span>сообщества активных людей Катана Груп,</span> <span>основатель и ведущий тренер</span> <span>обучающего проекта Катана Груп</span> </p>
                     <div class="card">
                         <ul>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Основатель ТМ Мега Турник</li>
