--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         <img src="https://i.5sfer.com/post/postImage/thumb-tPaPfiCepP.png" alt="">
                         <div class="card_body">
                             <h4>Везение в бизнесе. Хорошо или плохо?</h4>
-                            <span class="date">7 мая 2019 г. Константин Лашкевич</span>
+                            <span class="date">7 мая 2019 г. Виталий Бихунов</span>
                             <div class="hr"></div>
                             <span class="tags">Психология, Мышление, Деньги</span>
                             <a href="https://5sfer.com/24537-vezeniye-v-biznese-khorosho-ili-plokho.html" class="btn btn-blue" target="_blank">Читать полностью</a>
