--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
-                <h2>Навыки эффективного управления отделом <br> продаж менее, чем за 7 недель!</h2>
+                <h2>Навыки эффективного управления отделом продаж <br> менее, чем за 7 недель!</h2>
             </div>
             <div class="row">
                 <div class="col-lg-4">
@@ -219,14 +219,14 @@
                     </div>
                     <div class="works">
                         <img src="img/sec_1/work_1.png" alt="">
-                        <img src="img/sec_1/work_2.png" alt="">
+                        <img src="img/sec_1/work_2.png" width="150px" alt="">
                         <img src="img/sec_1/work_4.png" alt="">
-                        <img src="img/sec_1/work_3.png" alt="">
+                        <img src="img/sec_1/work_3.png" width="150px" alt="">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/konstantin.png" alt="SE">
+                        <img src="img/sec_1/alexey.png" alt="SE">
                     </div>
                 </div>
             </div>
@@ -535,6 +535,12 @@
                                 <p>Сможете увеличить оборот за 3 месяца</p>
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="media">
+                                <div class="icon"></div>
+                                <p>Выстроите взаимодействие между продажами и маркетингом</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="tab-pane fade for_top_managers" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
@@ -555,6 +561,12 @@
                             <div class="media">
                                 <div class="icon"></div>
                                 <p>Поймете, какой Директор <br> по продажам вам нужен </p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="media">
+                                <div class="icon"></div>
+                                <p>Проведете качественный аудит и найдете точки роста </p>
                             </div>
                         </div>
                     </div>
@@ -614,7 +626,7 @@
             <img alt="" class="abs_pic stone_orange" src="img/abs_pic/stone_orange.svg">
             <div class="sec_title">
                 <img src="img/sec_your_result/title_label.svg" alt="title_label">
-                <h2>Наши преимущества</h2>
+                <h2>Какие результаты вы получите после прохождения курса</h2>
                 <p>Вы получаете весь набор возможностей в одном месте:</p>
             </div>
             <div class="row">
@@ -728,14 +740,14 @@
             <img alt="" class="abs_pic cup" src="img/abs_pic/cup.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
-                <h2>Стоимость за участие в курсе <br> “Профессия Директор по продажам”</h2>
+                <h2>Варианты участия в курсе <br> “Профессия Директор по продажам”</h2>
                 <p>Инвестиции в свое обучение и развитие сейчас - всегда <br> окупается в сотни раз и приносит уникальные возможности!</p>
             </div>
             <div class="card">
                 <div class="media align-items-center">
                     <img class="media-image" src="img/sec_cost/ic_1.svg" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h4 class="card_title">Профессия Директор по продажам</h4>
+                        <h4 class="card_title">Профессия Директор по продажам <span class="font-weight-normal">: Топ-менеджер</span></h4>
                         <div class="b-card-body">
                             <ul class="list">
                                 <li>12 уроков в прямом эфире</li>
@@ -746,7 +758,6 @@
                                 <li>Сертификат о прохождении курса</li>
                             </ul>
                             <div class="right">
-                                <h5 class="mb-3">Топ-менеджер:</h5>
                                 <a href="" class="btn btn-success">Записаться</a>
                             </div>
                         </div>
@@ -757,7 +768,7 @@
                 <div class="media align-items-center">
                     <img class="media-image" src="img/sec_cost/ic_1.svg" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h4 class="card_title">Профессия Директор по продажам</h4>
+                        <h4 class="card_title">Профессия Директор по продажам <span class="font-weight-normal">: Владелец</span></h4>
                         <div class="b-card-body">
                             <ul class="list">
                                 <li>12 уроков в прямом эфире</li>
@@ -769,7 +780,6 @@
                                 <li>1 выездной день в компанию участника: аудит бизнеса + обсуждение рекомендаций (5 часов)</li>
                             </ul>
                             <div class="right">
-                                <h5 class="mb-3">Владелец:</h5>
                                 <a href="" class="btn btn-success">Записаться</a>
                             </div>
                         </div>
@@ -795,21 +805,21 @@
             <div class="row justify-content-between">
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
-                        <h3>Ицхак Пинтосевич</h3>
-                        <p>Владелец, Isaac Pintosevich Systems</p>
-                        <i>“Алексей реальный специалист, который доказал своими результатами, что умеет строить отделы продаж.
-                            Благодаря его работе, количество менеджеров в отделе продаж IPS выросло от 3 до 40 человек, а оборот увеличился в 10 раз.
-                            ”</i>
-                    </div>
-                </div>
-                <div class="col-md-4 card_wrapp">
-                    <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_success_stories/vova.jpg');"></div>
                         <h3>Марина Дорохина</h3>
                         <p>Начальник отдела продаж по новым рынкам, Google</p>
                         <i>“Тренинг превзошел все мои ожидания: он не только был полностью ориентирован на практику и непосредственное внедрение полученных приемов сразу в бизнес, но и познакомил с рядом новых инструментов.
                             Отдельно огромное спасибо хочу сказать Алексею за высочайший профессионализм, терпение и настойчивость, а также за бесконечную мотивацию к внедрению изменений и новых инструментов.
+                            ”</i>
+                    </div>
+                </div>
+                <div class="col-md-4 card_wrapp">
+                    <div class="card_profile">
+                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
+                        <h3>Ицхак Пинтосевич</h3>
+                        <p>Владелец, Isaac Pintosevich Systems</p>
+                        <i>“Алексей реальный специалист, который доказал своими результатами, что умеет строить отделы продаж.
+                            Благодаря его работе, количество менеджеров в отделе продаж IPS выросло от 3 до 40 человек, а оборот увеличился в 10 раз.
                             ”</i>
                     </div>
                 </div>
@@ -834,7 +844,7 @@
         <div class="container">
             <div class="sec_title">
                 <h2>Готовы сделать рывок в бизнесе и построить <br> эффективный отдел продаж?</h2>
-                <p>Стань участником курса Профессия “Директор по продажам” <br> и получи все необходимые инструменты для достижения своих целей</p>
+                <p>Примите участие в курсе Профессия “Директор по продажам” <br> и получите все необходимые инструменты для достижения своих целей</p>
             </div>
             <div class="row">
                 <div class="col-12"><a href="#" class="btn btn-success mx-auto">Записаться на Курс</a></div>
