--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="row">
                 <div class="col-12">
-                    <h1>Профессия Менеджер <br> по продажам</h1>
+                    <h1>Профессия <br> Менеджер по продажам</h1>
                 </div>
                 <div class="col-md-8">
                     <div class="undertitle_wrapp">
@@ -101,7 +101,7 @@
             <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
-                <h2>Создайте навык эффективных продаж менее, <br> чем за 30 дней!</h2>
+                <h2>Создайте навык эффективных продаж <br> менее, чем за 30 дней!</h2>
             </div>
             <div class="row">
                 <div class="col-lg-4">
@@ -216,14 +216,14 @@
                     </div>
                     <div class="works">
                         <img src="img/sec_1/work_1.png" alt="">
-                        <img src="img/sec_1/work_2.png" alt="">
+                        <img src="img/sec_1/work_2.png" width="150px" alt="">
                         <img src="img/sec_1/work_4.png" alt="">
-                        <img src="img/sec_1/work_3.png" alt="">
+                        <img src="img/sec_1/work_3.png" width="150px" alt="">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/konstantin.png" alt="SE">
+                        <img src="img/sec_1/alexey.png" alt="SE">
                     </div>
                 </div>
             </div>
@@ -341,25 +341,25 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="media">
-                                <div class="icon"></div>
+                                <img src="img/sec_tabs/icon-b2b.png" alt="icon-b2b">
                                 <p>B2B</p>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="media">
-                                <div class="icon"></div>
+                                <img src="img/sec_tabs/icon-b2c.png" alt="icon-b2c">
                                 <p>B2C</p>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="media">
-                                <div class="icon"></div>
+                                <img src="img/sec_tabs/icon-sales.png" alt="icon-sales">
                                 <p>Услуги</p>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="media">
-                                <div class="icon"></div>
+                                <img src="img/sec_tabs/icon-services.png" alt="icon-services">
                                 <p>IT сервисы (SAAS)</p>
                             </div>
                         </div>
@@ -380,7 +380,7 @@
             <img alt="" class="abs_pic stone_orange" src="img/abs_pic/stone_orange.svg">
             <div class="sec_title">
                 <img src="img/sec_your_result/title_label.svg" alt="title_label">
-                <h2>Наши преимущества</h2>
+                <h2>Какие результаты вы получите после прохождения курса</h2>
                 <p>Вы получаете весь набор возможностей в одном месте:</p>
             </div>
             <div class="row">
@@ -489,14 +489,14 @@
             <img alt="" class="abs_pic cup" src="img/abs_pic/cup.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
-                <h2>Стоимость за участие в курсе <br> “Профессия Менеджер по продажам”</h2>
+                <h2>Варианты участия в курсе <br> “Профессия Менеджер по продажам”</h2>
                 <p>Инвестиции в свое обучение и развитие сейчас - всегда <br> окупается в сотни раз и приносит уникальные возможности!</p>
             </div>
             <div class="card">
                 <div class="media align-items-center">
                     <img class="media-image" src="img/sec_cost/ic_1.svg" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h4 class="card_title">Профессия Менеджер по продажам</h4>
+                        <h4 class="card_title">В курс “Менеджер по продажам” включены:</h4>
                         <div class="b-card-body">
                             <ul class="list">
                                 <li>8 уроков в прямом эфире</li>
@@ -543,16 +543,6 @@
                 </div>
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/vova.jpg');"></div>
-                        <h3>Евгений Сербин</h3>
-                        <p>Менеджер по продажам</p>
-                        <i>“Доступная подача материала, непринужденное и доступное объяснение всей базы курса. Особенно понравился благодаря некоторым факторам: выявление потребностей клиента - достаточно продуктивный процесс, который позволяет более
-                            тонко и эффективно продвигать сделку с потенциальным клиентом; очень полезны речевые модули, которые были представлены на тренинге, а также работа с возражениями (для меня самый полезный и емкий по информативности блок).
-                            Тренинг может быть интересен абсолютно всем продавцам, как начинающим - для получения очень солидной базы знаний, так и уже опытным для внедрения новых техник продаж и корректировки уже имеющихся.”</i>
-                    </div>
-                </div>
-                <div class="col-md-4 card_wrapp">
-                    <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_success_stories/vitaliy.jpg');"></div>
                         <h3>Дмитрий Давыденко</h3>
                         <p>Sales development representative</p>
@@ -560,6 +550,16 @@
                             Самыми интересными блоками в тренинге для меня были возражения клиентов. Научился их преодолевать. Планирую внедрить все полученные знания на практике и увеличить свой заработок минимум втрое.
 
                             ”</i>
+                    </div>
+                </div>
+                <div class="col-md-4 card_wrapp">
+                    <div class="card_profile">
+                        <div class="icon" style="background-image: url('img/sec_success_stories/vova.jpg');"></div>
+                        <h3>Евгений Сербин</h3>
+                        <p>Менеджер по продажам</p>
+                        <i>“Доступная подача материала, непринужденное и доступное объяснение всей базы курса. Особенно понравился благодаря некоторым факторам: выявление потребностей клиента - достаточно продуктивный процесс, который позволяет более
+                            тонко и эффективно продвигать сделку с потенциальным клиентом; очень полезны речевые модули, которые были представлены на тренинге, а также работа с возражениями (для меня самый полезный и емкий по информативности блок).
+                            Тренинг может быть интересен абсолютно всем продавцам, как начинающим - для получения очень солидной базы знаний, так и уже опытным для внедрения новых техник продаж и корректировки уже имеющихся.”</i>
                     </div>
                 </div>
             </div>
