--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
             <img alt="" class="abs_pic cup" src="img/abs_pic/cup.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
-                <h2>Мои проекты</h2>
+                <h2>Ближайшие курсы</h2>
             </div>
             <div class="card with-date">
                 <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
                 <div class="media align-items-center">
-                    <img class="mr-md-3 media-image" src="img/logo.png" width="180px" alt="Generic placeholder image">
+                    <img class="mr-md-3 media-image d-md-block d-none" src="img/sec_my_projects/salesDep.jpg" width="180px" alt="Generic placeholder image">
                     <div class="media-body">
                         <div class="date_wrap">
                             <div class="item">
@@ -159,7 +159,7 @@
                         <img src="https://i.5sfer.com/post/postImage/thumb-x4fj43.jpg" alt="">
                         <div class="card_body">
                             <h4>Технология эффективной конверсии в Отделе Продаж</h4>
-                            <span class="date">12 мая 2019 г. Константин Лашкевич</span>
+                            <span class="date">12 мая 2019 г. Алексей Прохоров</span>
                             <div class="hr"></div>
                             <span class="tags">HR, Бизнес, Управление, Менеджмент </span>
                             <a href="https://5sfer.com/21708-tekhnologiya-effektivnoy-konversii-v-otdele-prodazh.html" class="btn btn-blue">Читать полностью</a>
@@ -171,7 +171,7 @@
                         <img src="https://i.5sfer.com/post/postImage/thumb-mmuhjb.jpg" alt="">
                         <div class="card_body">
                             <h4>Как генерировать новых клиентов с помощью Отдела Продаж</h4>
-                            <span class="date">7 мая 2019 г. Константин Лашкевич</span>
+                            <span class="date">7 мая 2019 г. Алексей Прохоров</span>
                             <div class="hr"></div>
                             <span class="tags">HR, Бизнес, Управление, Менеджмент </span>
                             <a href="https://5sfer.com/21690-kak-generirovat-novykh-kliyentov-s-pomoshchyu-otdela-prodazh.html" class="btn btn-blue">Читать полностью</a>
@@ -183,7 +183,7 @@
                         <img src="https://i.5sfer.com/post/postImage/thumb-s3sgef.jpg" alt="">
                         <div class="card_body">
                             <h4>Как набрать качественный персонал в Отдел Продаж</h4>
-                            <span class="date">12 мая 2019 г. Константин Лашкевич</span>
+                            <span class="date">12 мая 2019 г. Алексей Прохоров</span>
                             <div class="hr"></div>
                             <span class="tags">Энергия,Успех, Менеджмент</span>
                             <a href="https://5sfer.com/21673-kak-nabrat-kachestvennyy-personal-v-otdel-prodazh.html" class="btn btn-blue">Читать полностью</a>
@@ -195,7 +195,7 @@
                         <img src="https://i.5sfer.com/post/postImage/thumb-20460.jpg" alt="">
                         <div class="card_body">
                             <h4>10 секретов продающей <br> рекламы</h4>
-                            <span class="date">7 мая 2019 г. Константин Лашкевич</span>
+                            <span class="date">7 мая 2019 г. Алексей Прохоров</span>
                             <div class="hr"></div>
                             <span class="tags">Энергия,Успех, Менеджмент</span>
                             <a href="https://5sfer.com/20460-10-sekretov-prodayushhej-reklamy.html" class="btn btn-blue">Читать полностью</a>
@@ -221,21 +221,21 @@
             <div class="row justify-content-between">
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
-                        <h3>Ицхак Пинтосевич</h3>
-                        <p>Владелец, Isaac Pintosevich Systems</p>
-                        <i>“Алексей реальный специалист, который доказал своими результатами, что умеет строить отделы продаж.
-                            Благодаря его работе, количество менеджеров в отделе продаж IPS выросло от 3 до 40 человек, а оборот увеличился в 10 раз.
-                            ”</i>
-                    </div>
-                </div>
-                <div class="col-md-4 card_wrapp">
-                    <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_success_stories/vova.jpg');"></div>
                         <h3>Марина Дорохина</h3>
                         <p>Начальник отдела продаж по новым рынкам, Google</p>
                         <i>“Тренинг превзошел все мои ожидания: он не только был полностью ориентирован на практику и непосредственное внедрение полученных приемов сразу в бизнес, но и познакомил с рядом новых инструментов.
                             Отдельно огромное спасибо хочу сказать Алексею за высочайший профессионализм, терпение и настойчивость, а также за бесконечную мотивацию к внедрению изменений и новых инструментов.
+                            ”</i>
+                    </div>
+                </div>
+                <div class="col-md-4 card_wrapp">
+                    <div class="card_profile">
+                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
+                        <h3>Ицхак Пинтосевич</h3>
+                        <p>Владелец, Isaac Pintosevich Systems</p>
+                        <i>“Алексей реальный специалист, который доказал своими результатами, что умеет строить отделы продаж.
+                            Благодаря его работе, количество менеджеров в отделе продаж IPS выросло от 3 до 40 человек, а оборот увеличился в 10 раз.
                             ”</i>
                     </div>
                 </div>
